[gd_scene load_steps=27 format=3 uid="uid://km4mt2ya7b4l"]

[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_fxphx"]
[ext_resource type="Texture2D" uid="uid://deb4i1lgdf1pl" path="res://Enemies/Bat.png" id="1_ilngf"]
[ext_resource type="Shader" path="res://WhiteColor.gdshader" id="2_7prbw"]
[ext_resource type="Texture2D" uid="uid://0alxdxap0vnp" path="res://Shadows/SmallShadow.png" id="2_xuk3o"]
[ext_resource type="PackedScene" uid="uid://dfr3x8goekj0w" path="res://Overlap/hurtbox.tscn" id="3_7f3p7"]
[ext_resource type="PackedScene" uid="uid://e2alhohp666r" path="res://stats.tscn" id="5_ln2x3"]
[ext_resource type="PackedScene" uid="uid://2vghwa7ymtba" path="res://Enemies/player_detection_zone.tscn" id="6_wbq8o"]
[ext_resource type="PackedScene" uid="uid://dchtcfm7581id" path="res://Overlap/hitbox.tscn" id="7_ak3hv"]
[ext_resource type="PackedScene" uid="uid://bue0loaidscnx" path="res://Overlap/soft_collision.tscn" id="8_qcm2x"]
[ext_resource type="PackedScene" uid="uid://11vbt8kk01lj" path="res://Enemies/wander_controller.tscn" id="9_y5l5l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dgov6"]
resource_local_to_scene = true
shader = ExtResource("2_7prbw")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_hg0dw"]
atlas = ExtResource("1_ilngf")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3bgk"]
atlas = ExtResource("1_ilngf")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q25x"]
atlas = ExtResource("1_ilngf")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fnmr"]
atlas = ExtResource("1_ilngf")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s17u"]
atlas = ExtResource("1_ilngf")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_y7fru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg0dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3bgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q25x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fnmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s17u")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cous5"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gbc6g"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h57on"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_doi3f"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ryx3s"]
radius = 7.0

[sub_resource type="Animation" id="Animation_jym5d"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3yw30"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l7mlm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4j4dv"]
_data = {
"RESET": SubResource("Animation_l7mlm"),
"Start": SubResource("Animation_jym5d"),
"Stop": SubResource("Animation_3yw30")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_fxphx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dgov6")
sprite_frames = SubResource("SpriteFrames_y7fru")
animation = &"fly"
autoplay = "fly"
offset = Vector2(0, -12)

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_xuk3o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cous5")

[node name="Hurtbox" parent="." instance=ExtResource("3_7f3p7")]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_gbc6g")

[node name="Stats" parent="." instance=ExtResource("5_ln2x3")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_wbq8o")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color(1, 1, 1, 0.278431)
shape = SubResource("CircleShape2D_h57on")

[node name="Hitbox" parent="." instance=ExtResource("7_ak3hv")]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_doi3f")
debug_color = Color(0.752941, 0.356863, 0.729412, 0.419608)

[node name="SoftCollision" parent="." instance=ExtResource("8_qcm2x")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_ryx3s")

[node name="WanderController" parent="." instance=ExtResource("9_y5l5l")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_4j4dv")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
